# rialo-captain

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  vercel.json
.agents/skills/dev-workflow/: SKILL.md
api/: index.py
backend/: app.py  config.py  db.py  models.py
backend/admin/: deps.py  routes.py
backend/auth/: deps.py  google.py  jwt.py  routes.py  service.py
backend/claims/: engine.py  routes.py  service.py  signature.py
backend/contracts/: base.py  factory.py  mock_rialo.py  real_rialo.py
backend/copilot/: context.py  provider.py  routes.py  schemas.py  service.py
backend/evidence/: __init__.py  routes.py  schemas.py  service.py
backend/flights/: cache.py  fetcher.py  mock.py  opensky.py  routes.py  service.py
backend/policies/: routes.py  schemas.py  service.py
backend/tests/: conftest.py  factories.py
backend/tests/unit/: test_config.py  (+20 more)
backend/ws/: broadcaster.py  deps.py  routes.py
docs/plans/: 2026-06-18-login-tower-landing.md  2026-06-24-settlement-evidence-replay.md  2026-06-25-rialo-copilot-visible-ai.md  2026-06-26-stream-rialo-copilot-inline-plan.md  2026-06-30-guided-demo-director.md
frontend/: .env.example  .eslintrc.cjs  deploy.config.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vite-config.test.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts  foundation.spec.ts
frontend/scripts/: ensure-production-env.mjs  ensure-production-env.test.mjs  vercel-config.test.mjs
frontend/src/: App.tsx  main.tsx  types.ts
scripts/: dev.sh
(+287 files in other folders)
